<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.gging.hw1.MainActivity">

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spnSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spn_sex_list_promt"
        android:entries="@array/sex_list"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radGAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radBAge1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maleAgeRange1"/>
        <RadioButton
            android:id="@+id/radBAge2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maleAgeRange2"/>
        <RadioButton
            android:id="@+id/radBAge3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maleAgeRange3"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtNFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"/>

    <NumberPicker
        android:id="@+id/numPFamily"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="18sp"/>

</LinearLayout>
